// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WithFacility With two facilities should show the facility selection screen 1`] = `
<main
  class="prime-home"
  id="facility-select"
>
  <div
    class="grid-container"
  >
    <div
      class="grid-row position-relative"
    >
      <div
        class="prime-container card-container"
      >
        <div
          class="usa-card__header"
        >
          <div>
            <h2>
              SimpleReport
            </h2>
            <div
              class="organization-name"
            >
              Organization Name
            </div>
          </div>
        </div>
        <div
          class="usa-card__body"
        >
          <p
            class="welcome"
          >
            Welcome, 
            Kim Mendoza
          </p>
          <p
            class="select-text"
          >
            Please select the testing facility where you are working today.
          </p>
          <button
            class="usa-button usa-button--outline"
            type="button"
          >
            Facility 1
          </button>
          <button
            class="usa-button usa-button--outline"
            type="button"
          >
            Facility 2
          </button>
        </div>
      </div>
    </div>
  </div>
</main>
`;

exports[`WithFacility With zero facilities should notify user to contact an admin 1`] = `
<main
  className="prime-home"
  id="facility-select"
>
  <div
    className="grid-container"
  >
    <div
      className="grid-row position-relative"
    >
      <div
        className="prime-container card-container"
      >
        <div
          className="usa-card__header"
        >
          <div>
            <h2>
              SimpleReport
            </h2>
            <div
              className="organization-name"
            >
              Organization Name
            </div>
          </div>
        </div>
        <div
          className="usa-card__body"
        >
          <p
            className="welcome"
          >
            Welcome, 
            Kim Mendoza
          </p>
          <p>
            You do not have access to any facilities at this time.
          </p>
          <p>
            Ask an administrator to assign you access, then try logging in again.
          </p>
        </div>
      </div>
    </div>
  </div>
</main>
`;
